--- a/css/theme.scss
+++ b/css/theme.scss
@@ -93,10 +93,10 @@ blockquote {
 //                    Links
 //********************************************************
 a {
-  color: #3CA2A2;
+  color: #66CCFF;
 }
 a:hover {
-  color: #3CA2A2;
+  color: #66CCFF;
   border-bottom: 1px solid transparent;
 }
 
