--- a/css/theme.scss
+++ b/css/theme.scss
@@ -58,10 +58,10 @@ h5 { font-size: .83em; }
 h6 { font-size: .75em; }
 
 .author {
-  color: #ee4444;
+  color: #66CCFF;
 }
 .author a {
-  color: #ee4444;
+  color: #66CCFF;
 }
 
 img {
@@ -116,7 +116,7 @@ ul.social-media {
     display: inline-block;
     color: white;
     &:hover {
-      color: #3CA2A2;
+      color: #66CCFF;
     }
   }
 }
@@ -205,7 +205,7 @@ nav.navbar.shrink {
 }
 .navbar-brand {
   font-size: 30px;
-  color: #3CA2A2 !important;
+  color: #66CCFF !important;
 
 }
 nav.shrink a {
